--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+werkzeug
 flask
 Flask-SQLAlchemy==2.4.1
 SQLAlchemy==1.3.11
 Flask-Migrate==2.5.2
 click==7.0
 alembic==1.3.1
+flask_restless==0.10.0
