--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+marshmallow
 werkzeug
 flask
 Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.11
+SQLAlchemy==1.3.12
 Flask-Migrate==2.5.2
 click==7.0
-alembic==1.3.1
+alembic==1.3.2
 flask_restless==0.10.0
 Flask-HTTPAuth==3.3.0
+python-dotenv==0.10.3
