--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-marshmallow
-werkzeug
-flask
-Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.12
-Flask-Migrate==2.5.2
-click==7.0
-alembic==1.3.2
-flask_restless==0.10.0
+alembic==1.3.3
+Click==7.0
+Flask==1.1.1
 Flask-HTTPAuth==3.3.0
-python-dotenv==0.10.3
+flask-marshmallow==0.10.1
+Flask-Migrate==2.5.2
+Flask-Restless==0.10.0
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+marshmallow==3.3.0
+marshmallow-sqlalchemy==0.21.0
+python-dateutil==2.8.1
+python-dotenv==0.10.5
+python-editor==1.0.4
+six==1.13.0
+SQLAlchemy==1.3.13
+Werkzeug==0.16.0
