--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+passlib
 alembic==1.3.3
 Click==7.0
 Flask==1.1.1
@@ -19,3 +20,7 @@ six==1.13.0
 SQLAlchemy==1.3.13
 Werkzeug==0.16.0
 Flask-Cors==3.0.8
+
+# requirements for Heroku
+psycopg2==2.7.3.1
+gunicorn==19.7.1
