--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,7 @@ SQLAlchemy==1.3.13
 Werkzeug==0.16.0
 Flask-Cors==3.0.8
 
-# requirements for Heroku
-psycopg2==2.7.3.1
-gunicorn==19.7.1
-
 numpy>=1.18.3
 pandas>=1.0.3
+
+requests==2.23.0
