new commit from sblm

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SECRET_KEY=52cb883e323b48d78a0a36e8e951ba4a
-MAIL_SERVER=localhost
-MAIL_PORT=25
-DATABASE_URL=mysql+pymysql://blue:R4bb!t@localhost:3306/blue
-MS_TRANSLATOR_KEY=<your-translator-key-here>
+#SECRET_KEY=52cb883e323b48d78a0a36e8e951ba4a
+#MAIL_SERVER=localhost
+#MAIL_PORT=25
+#DATABASE_URL=mysql+pymysql://blue:R4bb!t@localhost:3306/blue
+#MS_TRANSLATOR_KEY=<your-translator-key-here>
